--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <meta name="twitter:site" content="@ClarifyAI" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/public/favicon.ico" />
+    <link rel="icon" type="image/png" href="/favicon.ico" />
 
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
